--- a/index.html
+++ b/index.html
@@ -2579,8 +2579,8 @@
                                     <p class="TextoCuenta">
                                         <span>Datos para tu depósito de <br>Pokemonedas</span><br>
                                         (en MXN)<br><br>
-                                        Banco: Nu <br><br>
-                                        Cuenta Clave: 12345678 <br><br>
+                                        Banco: Nu México<br><br>
+                                        Cuenta CLABE: 6381 8000 0112 3538 27 <br><br>
                                         Titular: Karla Daniela Barajas Hernández <br><br>
                                     </p>
                                     <div class="Separador"></div>
@@ -2607,8 +2607,6 @@
                             </td>
                         </tr>
                     </table>
-
-
 
                     <table class="TableH1">
                         <tr>
@@ -3004,7 +3002,7 @@
                                     <div class="card-inner">
                                         <div class="card-front FichaContacto">
                                             <p class="TextoContacto" style="padding-top: 9%;">Wedding Planner</p>
-                                            <img loading="lazy" class="NekoIMG" src="/Neko3.png" alt="">
+                                            <img loading="lazy" class="NekoIMG" src="/maltWed.gif" alt="">
                                         </div>
                                         <div class="card-back FichaContacto">
                                             <p class="TextoContactoCards">🧑🏽‍💼 Soy Yahir</p>
