--- a/index.html
+++ b/index.html
@@ -2575,7 +2575,7 @@
                         <tr>
                             <td class="TDCuenta">
                                 <div class="Cuenta">
-                                    <p class="TextoCuenta">
+                                    <p class="TextoCuenta" style="color: black !important;">
                                         <span>Datos para tu depósito de <br>Pokemonedas</span><br>
                                         (en MXN)<br><br>
                                         Banco: Nu México<br><br>
