--- a/index.html
+++ b/index.html
@@ -2584,7 +2584,7 @@
                                     </p>
                                     <div class="Separador"></div>
 
-                                    <p class="TextoCuenta">
+                                    <p class="TextoCuenta" style="color: black !important;">
                                         <span>Datos para tu depósito de <br>Pokemonedas</span> <br>
                                         (en otras monedas)<br><br>
                                         Banco: Wise <br><br>
@@ -2964,7 +2964,7 @@
                                             <p class="TextoContactoCards">🤵🏾 Tambien conocido como Lalo</p>
                                             <p class="TextoContactoCards"></p>
                                             <p class="TextoContactoCards"
-                                                style="margin: 0px; color: #395a9d !important;">(+34) 685-703-622</p>
+                                                style="margin: 0px; color: #395a9d !important; color: black;">(+34) 685-703-622</p>
                                             <p class="TextoContactoCards" style="margin: 0px;"><a class="insta"
                                                     style="color: #51cddb; font-weight:bold"
                                                     href="https://www.instagram.com/ellalo_inmadrid/">@ellalo_inmadrid</a>
@@ -2987,7 +2987,7 @@
                                                 nombre*</p>
                                             <p class="TextoContactoCards"></p>
                                             <p class="TextoContactoCards"
-                                                style="margin: 0px; color: #395a9d !important;">(+34) 625-830-666</p>
+                                                style="margin: 0px; color: #395a9d !important; color: black;">(+34) 625-830-666</p>
                                             <p class="TextoContactoCards" style="margin: 0px;"><a class="insta"
                                                     style="color: #51cddb; font-weight:bold"
                                                     href="https://www.instagram.com/krawr_uwu/">@krawr_uwu</a></p>
