--- a/index.html
+++ b/index.html
@@ -1172,7 +1172,7 @@
     .TextoContactoCards {
         font-size: 20px;
         font-weight: 600;
-        color: #395a9d;
+        color: #395a9d !important;
         font-family: 'Carme' !important;
         padding: 0 4%;
     }
