--- a/index.html
+++ b/index.html
@@ -1874,6 +1874,8 @@
 <body>
     <!-- Popup -->
     <div class="popup-overlay" id="popup">
+            <link rel="icon" type="image/png" sizes="132x132" href="./Kwon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./Kwon.png">
         <div class="popup">
             <h1>🎉 Bienvenidos</h1>
             <p>
