--- a/index.html
+++ b/index.html
@@ -2581,7 +2581,7 @@
                                         <span>Datos para tu depósito de <br>Pokemonedas</span><br>
                                         (en MXN)<br><br>
                                         Banco: Nu México<br><br>
-                                        Cuenta CLABE: 6381 8000 0112 3538 27 <br><br>
+                                        Cuenta CLABE: 638180000112353827 <br><br>
                                         Titular: Karla Daniela Barajas Hernández <br><br>
                                     </p>
                                     <div class="Separador"></div>
