--- a/index.html
+++ b/index.html
@@ -2590,7 +2590,7 @@
                                         <span>Datos para tu depósito de <br>Pokemonedas</span> <br>
                                         (en otras monedas)<br><br>
                                         Banco: Wise <br><br>
-                                        IBAN: BE93 9679 0513 6567<br><br>
+                                        IBAN: BE93967905136567<br><br>
                                         Titular: Jesús Eduardo Téllez Luna <br><br>
                                     </p>
                                     <div class="PusheenDiv">
@@ -2966,7 +2966,7 @@
                                             <p class="TextoContactoCards">🤵🏾 Tambien conocido como Lalo</p>
                                             <p class="TextoContactoCards"></p>
                                             <p class="TextoContactoCards"
-                                                style="margin: 0px; color: #395a9d !important; color: black;">(+34) 685-703-622</p>
+                                                style="margin: 0px; color: #395a9d !important; color: black;">(+34)685-703-622</p>
                                             <p class="TextoContactoCards" style="margin: 0px;"><a class="insta"
                                                     style="color: #51cddb; font-weight:bold"
                                                     href="https://www.instagram.com/ellalo_inmadrid/">@ellalo_inmadrid</a>
@@ -2989,7 +2989,7 @@
                                                 nombre*</p>
                                             <p class="TextoContactoCards"></p>
                                             <p class="TextoContactoCards"
-                                                style="margin: 0px; color: #395a9d !important; color: black;">(+34) 625-830-666</p>
+                                                style="margin: 0px; color: #395a9d !important; color: black;">(+34)625-830-666</p>
                                             <p class="TextoContactoCards" style="margin: 0px;"><a class="insta"
                                                     style="color: #51cddb; font-weight:bold"
                                                     href="https://www.instagram.com/krawr_uwu/">@krawr_uwu</a></p>
@@ -3009,7 +3009,7 @@
                                             <p class="TextoContactoCards">🧑🏽‍💼 Soy Yahir</p>
                                             <p class="TextoContactoCards"></p>
                                             <p class="TextoContactoCards"
-                                                style="margin: 0px; color: #395a9d !important;">(+52) 777-612-6623</p>
+                                                style="margin: 0px; color: #395a9d !important;">(+52)777-612-6623</p>
                                             <p class="TextoContactoCards" style="margin: 0px;"><a class="insta"
                                                     style="color: #51cddb; font-weight:bold"
                                                     href="https://www.instagram.com/tubodaen_cuerna/">@tubodaen_cuerna</a>
