--- a/index.html
+++ b/index.html
@@ -5,7 +5,31 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image" content="https://www.chiquiwedding.com/Kwon.png">
+
+
+  <!-- Título que aparece en el preview -->
+  <meta property="og:title" content="Karla & Lalo – Nuestra Boda">
+  
+  <!-- Descripción que acompaña al título -->
+  <meta property="og:description" content="Encuentra todos los detalles de nuestra boda: ubicación, hospedaje, confirmación, contacto y más.">
+  
+  <!-- Imagen de vista previa (asegúrate de que sea accesible públicamente y tenga buen tamaño) -->
+  <meta property="og:image" content="https://www.chiquiwedding.com/Kwon.png">
+  <meta property="og:image:type" content="image/jpeg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  
+  <!-- URL canónica de la página -->
+  <meta property="og:url" content="https://www.chiquiwedding.com">
+  <meta property="og:type" content="website">
+  
+  <!-- Para compatibilidad en Twitter (opcional pero recomendable) -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Karla & Lalo – Nuestra Boda">
+  <meta name="twitter:description" content="Encuentra todos los detalles de nuestra boda: ubicación, hospedaje, confirmación, contacto y más.">
+  <meta name="twitter:image" content="https://www.chiquiwedding.com/Kwon.png">
+
+
     <title>Karla & Lalo</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
