--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:description" content="Encuentra todos los detalles de nuestra boda: ubicación, hospedaje, confirmación, contacto y más.">
   
   <!-- Imagen de vista previa (asegúrate de que sea accesible públicamente y tenga buen tamaño) -->
-  <meta property="og:image" content="https://www.chiquiwedding.com/Kwon.png">
+  <meta property="og:image" content="https://www.chiquiwedding.com/Kwon.webp">
   <meta property="og:image:type" content="image/jpeg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -27,7 +27,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Karla & Lalo – Nuestra Boda">
   <meta name="twitter:description" content="Encuentra todos los detalles de nuestra boda: ubicación, hospedaje, confirmación, contacto y más.">
-  <meta name="twitter:image" content="https://www.chiquiwedding.com/Kwon.png">
+  <meta name="twitter:image" content="https://www.chiquiwedding.com/Kwon.webp">
 
 
     <title>Karla & Lalo</title>
@@ -1898,8 +1898,6 @@
 <body>
     <!-- Popup -->
     <div class="popup-overlay" id="popup">
-            <link rel="icon" type="image/png" sizes="132x132" href="./Kwon.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./Kwon.png">
         <div class="popup">
             <h1>🎉 Bienvenidos</h1>
             <p>
