--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:description" content="Encuentra todos los detalles de nuestra boda: ubicación, hospedaje, confirmación, contacto y más.">
   
   <!-- Imagen de vista previa (asegúrate de que sea accesible públicamente y tenga buen tamaño) -->
-  <meta property="og:image" content="https://www.chiquiwedding.com/Kwon.webp">
+  <meta property="og:image" content="https://www.chiquiwedding.com/Kwon.jpg">
   <meta property="og:image:type" content="image/jpeg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -27,7 +27,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Karla & Lalo – Nuestra Boda">
   <meta name="twitter:description" content="Encuentra todos los detalles de nuestra boda: ubicación, hospedaje, confirmación, contacto y más.">
-  <meta name="twitter:image" content="https://www.chiquiwedding.com/Kwon.webp">
+  <meta name="twitter:image" content="https://www.chiquiwedding.com/Kwon.jpg">
 
 
     <title>Karla & Lalo</title>
