--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="icon" type="image/png" sizes="132x132" href="./Kwon.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./Kwon.png">
+<link rel="icon" type="image/png" sizes="132x132" href="./Kwon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="./Kwon.png">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-  <!-- Título que aparece en el preview -->
-  <meta property="og:title" content="Karla & Lalo – Nuestra Boda">
-  
-  <!-- Descripción que acompaña al título -->
-  <meta property="og:description" content="Encuentra todos los detalles de nuestra boda: ubicación, hospedaje, confirmación, contacto y más.">
-  
-  <!-- Imagen de vista previa (asegúrate de que sea accesible públicamente y tenga buen tamaño) -->
-  <meta property="og:image" content="https://www.chiquiwedding.com/Kwon.jpg">
-  <meta property="og:image:type" content="image/jpeg">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="630">
-  
-  <!-- URL canónica de la página -->
-  <meta property="og:url" content="https://www.chiquiwedding.com">
-  <meta property="og:type" content="website">
-  
-  <!-- Para compatibilidad en Twitter (opcional pero recomendable) -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Karla & Lalo – Nuestra Boda">
-  <meta name="twitter:description" content="Encuentra todos los detalles de nuestra boda: ubicación, hospedaje, confirmación, contacto y más.">
-  <meta name="twitter:image" content="https://www.chiquiwedding.com/Kwon.jpg">
+    <!-- Título que aparece en el preview -->
+    <meta property="og:title" content="Karla & Lalo – Nuestra Boda">
+
+    <!-- Descripción que acompaña al título -->
+    <meta property="og:description"
+        content="Encuentra todos los detalles de nuestra boda: ubicación, hospedaje, confirmación, contacto y más.">
+
+    <!-- Imagen de vista previa (asegúrate de que sea accesible públicamente y tenga buen tamaño) -->
+    <meta property="og:image" content="https://www.chiquiwedding.com/Kwon.jpg">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+
+    <!-- URL canónica de la página -->
+    <meta property="og:url" content="https://www.chiquiwedding.com">
+    <meta property="og:type" content="website">
+
+    <!-- Para compatibilidad en Twitter (opcional pero recomendable) -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Karla & Lalo – Nuestra Boda">
+    <meta name="twitter:description"
+        content="Encuentra todos los detalles de nuestra boda: ubicación, hospedaje, confirmación, contacto y más.">
+    <meta name="twitter:image" content="https://www.chiquiwedding.com/Kwon.jpg">
 
 
     <title>Karla & Lalo</title>
@@ -2988,7 +2991,8 @@
                                             <p class="TextoContactoCards">🤵🏾 Tambien conocido como Lalo</p>
                                             <p class="TextoContactoCards"></p>
                                             <p class="TextoContactoCards"
-                                                style="margin: 0px; color: #395a9d !important; color: black;">(+34)685-703-622</p>
+                                                style="margin: 0px; color: #395a9d !important; color: black;">
+                                                (+34)685-703-622</p>
                                             <p class="TextoContactoCards" style="margin: 0px;"><a class="insta"
                                                     style="color: #51cddb; font-weight:bold"
                                                     href="https://www.instagram.com/ellalo_inmadrid/">@ellalo_inmadrid</a>
@@ -3011,7 +3015,8 @@
                                                 nombre*</p>
                                             <p class="TextoContactoCards"></p>
                                             <p class="TextoContactoCards"
-                                                style="margin: 0px; color: #395a9d !important; color: black;">(+34)625-830-666</p>
+                                                style="margin: 0px; color: #395a9d !important; color: black;">
+                                                (+34)625-830-666</p>
                                             <p class="TextoContactoCards" style="margin: 0px;"><a class="insta"
                                                     style="color: #51cddb; font-weight:bold"
                                                     href="https://www.instagram.com/krawr_uwu/">@krawr_uwu</a></p>
