--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         content="Encuentra todos los detalles de nuestra boda: ubicación, hospedaje, confirmación, contacto y más.">
 
     <!-- Imagen de vista previa (asegúrate de que sea accesible públicamente y tenga buen tamaño) -->
-    <meta property="og:image" content="https://www.chiquiwedding.com/Kwon.jpg">
+    <meta property="og:image" content="https://www.chiquiwedding.com/KwonMeta.jpg">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -30,7 +30,7 @@
     <meta name="twitter:title" content="Karla & Lalo – Nuestra Boda">
     <meta name="twitter:description"
         content="Encuentra todos los detalles de nuestra boda: ubicación, hospedaje, confirmación, contacto y más.">
-    <meta name="twitter:image" content="https://www.chiquiwedding.com/Kwon.jpg">
+    <meta name="twitter:image" content="https://www.chiquiwedding.com/KwonMeta.jpg">
 
 
     <title>Karla & Lalo</title>
