--- a/index.html
+++ b/index.html
@@ -2991,8 +2991,8 @@
                                             <p class="TextoContactoCards">🤵🏾 Tambien conocido como Lalo</p>
                                             <p class="TextoContactoCards"></p>
                                             <p class="TextoContactoCards"
-                                                style="margin: 0px; color: #395a9d !important; color: black;">
-                                                (+34)685-703-622</p>
+                                                style="margin: 0px; color: #395a9d !important; color: black;"><a style="color: #395a9d !important;"> (+34)685-703-622</a>
+                                            </p>
                                             <p class="TextoContactoCards" style="margin: 0px;"><a class="insta"
                                                     style="color: #51cddb; font-weight:bold"
                                                     href="https://www.instagram.com/ellalo_inmadrid/">@ellalo_inmadrid</a>
@@ -3016,7 +3016,7 @@
                                             <p class="TextoContactoCards"></p>
                                             <p class="TextoContactoCards"
                                                 style="margin: 0px; color: #395a9d !important; color: black;">
-                                                (+34)625-830-666</p>
+                                                <a style="color: #395a9d !important;">(+34)625-830-666</a></p>
                                             <p class="TextoContactoCards" style="margin: 0px;"><a class="insta"
                                                     style="color: #51cddb; font-weight:bold"
                                                     href="https://www.instagram.com/krawr_uwu/">@krawr_uwu</a></p>
@@ -3036,7 +3036,8 @@
                                             <p class="TextoContactoCards">🧑🏽‍💼 Soy Yahir</p>
                                             <p class="TextoContactoCards"></p>
                                             <p class="TextoContactoCards"
-                                                style="margin: 0px; color: #395a9d !important;">(+52)777-612-6623</p>
+                                                style="margin: 0px; color: #395a9d !important;">
+                                                <a style="color: #395a9d !important;">(+52)777-612-6623</a></p>
                                             <p class="TextoContactoCards" style="margin: 0px;"><a class="insta"
                                                     style="color: #51cddb; font-weight:bold"
                                                     href="https://www.instagram.com/tubodaen_cuerna/">@tubodaen_cuerna</a>
